Fix: set high z-index to be always on top

--- a/css/utils.css
+++ b/css/utils.css
@@ -59,6 +59,7 @@ body {
     border-radius: 0;
     width: 100%;
     height: 100vh;
+    z-index: 1000;
   }
   
   .navbar ul {
